[metadata]
name = pak_unior
version = 1.2.8
url = https://github.com/ArtyomZemlyak/pak_unior
license = OSL
author = ArtemZemliak
author_email = artyom.zemlyak@gmail.com
description = PAK UNIOR web plot
long_description = file: READМE.rst
repipquires-python = >=3.7
include_package_data = True

[options.package_data]
* = *.yml, *.rst